Fixed the Skills Tooltip Z-Index value.

--- a/css/iamsaisudheer-style.css
+++ b/css/iamsaisudheer-style.css
@@ -351,6 +351,7 @@ span.client-name {
 .tooltip{ 
   position:relative;
   float:left;
+  z-index: 0;
 }
 .tooltip > .tooltip-inner {background-color: #ffffff; padding:5px 15px; color:rgb(23,44,66); font-size:14px;}
 .popOver + .tooltip > .tooltip-arrow {    border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #fff;}
